# PhysX

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vercel.json
.devcontainer/: Dockerfile  (+1 more)
blast/blast-stress-demo-rs/: AGENTS.md  Cargo.toml  README.md
blast/blast-stress-demo-rs/assets/scenes/: brick-building.json  fractured-bridge.json  fractured-tower.json
blast/blast-stress-demo-rs/assets/shaders/: body_material.wgsl
blast/blast-stress-demo-rs/src/: main.rs  scene_pack.rs
blast/blast-stress-demo-rs/tests/: headless_shot_scripts.rs
blast/blast-stress-solver-rs/: .gitignore  Cargo.toml  README.md  build.rs
blast/blast-stress-solver-rs/examples/: auto_bond_wall.rs  check_scenarios.rs
blast/blast-stress-solver-rs/src/: authoring.rs  bond_stress.rs  ext_stress_solver.rs  ffi.rs  lib.rs  stress_processor.rs  types.rs  wasm_cxa_stubs.rs  wasm_runtime_shims.rs
blast/blast-stress-solver-rs/src/rapier/: body_tracker.rs  collision_groups.rs  destructible.rs  fracture_policy.rs  mod.rs  optimization.rs  resimulation.rs  runtime.rs  split_migrator.rs
blast/blast-stress-solver-rs/src/scenarios/: bridge.rs  mod.rs  tower.rs  wall.rs
blast/blast-stress-solver-rs/tests/: authoring_test.rs  cross_validation_test.rs  headless_scenarios_test.rs  rapier_integration_test.rs  split_migrator_test.rs  stress_solver_test.rs  wasm_smoke_test.rs
blast/blast-stress-solver-rs/tests/fixtures/: js_reference_data.json
blast/blast-stress-solver-rs/tests/wasm_smoke/fixture/: Cargo.toml
blast/rust_stress_example/: Cargo.toml  build.rs
blast/rust_stress_example/ffi/: ext_stress_bridge.cpp  ext_stress_bridge.h  stress_bridge.cpp  stress_bridge.h
blast/rust_stress_example/src/: lib.rs  main.rs
demos/blast-stress-demo/: CMakeLists.txt  README.md  main.cpp
ovphysx/python/: .gitignore  README.md  pyproject.toml  setup.py
ovphysx/python/ovphysx/: __init__.py  __main__.py  _bindings.py  _dlpack_utils.py  _pxr_stubs.py  api.py  config.py  contact_types.py  dlpack.py  types.py  usd_version_check.py
ovphysx/python/ovphysx/tensors/: __init__.py
ovphysx/tests/c_samples/clone_c/: CMakeLists.txt  main.c
ovphysx/tests/c_samples/contact_binding_c/: CMakeLists.txt  main.c
ovphysx/tests/c_samples/hello_world_c/: CMakeLists.txt  main.c
ovphysx/tests/c_samples/omnipvd_recording_cpp/: CMakeLists.txt  main.cpp
ovphysx/tests/c_samples/physx_interop_cpp/: CMakeLists.txt  main.cpp
ovphysx/tests/c_samples/tensor_bindings_c/: CMakeLists.txt  main.c
ovphysx/tests/c_samples/tensor_bindings_gpu_c/: CMakeLists.txt  main.c
physx/compiler/public/: CMakeLists.txt
physx/source/compiler/cmake/: CMakeLists.txt  FastXml.cmake  LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXGPUExtensions.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  PhysXVehicle2.cmake  SceneQuery.cmake  SimulationController.cmake
physx/source/compiler/cmake/android/: CMakeLists.txt  FastXml.cmake  LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  PhysXVehicle2.cmake  SceneQuery.cmake  SimulationController.cmake
physx/source/compiler/cmake/emscripten/: CMakeLists.txt  LowLevelAABB.cmake  PhysXVehicle.cmake  PhysXWasmBindings.cmake
physx/source/compiler/cmake/ios/: CMakeLists.txt  FastXml.cmake  LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  PhysXVehicle2.cmake  SceneQuery.cmake  SimulationController.cmake
physx/source/compiler/cmake/jni-android/: CMakeLists.txt  LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXJniBindings.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  SceneQuery.cmake  SimulationController.cmake
physx/source/compiler/cmake/jni-linux/: CMakeLists.txt  LowLevel.cmake  LowLevelAABB.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXVehicle.cmake
physx/source/compiler/cmake/jni-mac/: CMakeLists.txt  LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  SceneQuery.cmake  SimulationController.cmake
physx/source/compiler/cmake/jni-windows/: CMakeLists.txt  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXTask.cmake  PhysXVehicle.cmake
physx/source/compiler/cmake/linux/: CMakeLists.txt  FastXml.cmake  LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXGPUExtensions.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  PhysXVehicle2.cmake  SceneQuery.cmake  SimulationController.cmake
physx/source/compiler/cmake/mac/: CMakeLists.txt  FastXml.cmake  LowLevel.cmake  LowLevelAABB.cmake  LowLevelDynamics.cmake  PhysX.cmake  PhysXCharacterKinematic.cmake  PhysXCommon.cmake  PhysXCooking.cmake  PhysXExtensions.cmake  PhysXFoundation.cmake  PhysXPvdSDK.cmake  PhysXTask.cmake  PhysXVehicle.cmake  PhysXVehicle2.cmake  SceneQuery.cmake  SimulationController.cmake
physx/source/compiler/cmakegpu/: CMakeLists.txt  PhysXArticulationGpu.cmake  PhysXBroadphaseGpu.cmake  PhysXCommonGpu.cmake  PhysXCudaContextManager.cmake  PhysXGpu.cmake  PhysXGpuDependencies.cmake  PhysXNarrowphaseGpu.cmake  PhysXSimulationControllerGpu.cmake  PhysXSolverGpu.cmake
(+56500 files in other folders)
