[package]
name = "blast-stress-solver"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "NVIDIA Blast stress solver for destructible structures, with optional Rapier3D integration"
links = "blast_stress_solver_ffi"

[features]
default = []
rapier = ["dep:rapier3d"]
scenarios = []

[dependencies]
rapier3d = { version = "0.30", default-features = false, features = ["dim3", "f32"], optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rapier3d = { version = "0.30", default-features = false, features = ["dim3", "f32"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
