[package]
name = "blast-stress-solver"
version = "0.4.1"
publish = false
edition = "2021"
readme = "README.md"
repository = "https://github.com/Glavin001/PhysX"
homepage = "https://github.com/Glavin001/PhysX"
documentation = "https://docs.rs/blast-stress-solver"
license = "BSD-3-Clause"
description = "Blast stress solver for destructible structures, with optional Rapier3D integration"
links = "blast_stress_solver_ffi"

[features]
default = []
rapier = ["dep:rapier3d"]
scenarios = []
authoring = []
# Opt-in regression tests for the `wasm32-unknown-unknown` build. These
# shell out to `cargo` to build a fixture cdylib under
# `tests/wasm_smoke/fixture/`, then inspect the resulting .wasm for
# stray `env.*` / `wasi_snapshot_preview1.*` imports. Enable with
# `cargo test -p blast-stress-solver --features wasm-smoke`. Requires the
# `wasm32-unknown-unknown` target and a wasi C++ toolchain
# (e.g. `libc++-18-dev-wasm32`) to be installed on the host.
wasm-smoke = []

[dependencies]
rapier3d = { version = "0.30", default-features = false, features = ["dim3", "f32"], optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rapier3d = { version = "0.30", default-features = false, features = ["dim3", "f32"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmparser = "0.224"
